# recursive-agents

./: .gitignore  .pre-commit-config.yaml  CONFIG-TYPES.md  Makefile  PROJECT_STRUCTURE.md  README.md  debug_test.py  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  start_dashboard.ps1
.claude/: CLAUDE.md  CODING-PROMPT-BANK.MD  PROJECT_SUMMARY.md  README.md  TODO.md  decisions.md  gotchas.md  kernel-init.md  patterns.md  research.md
.claude/commands/: handoff.md  plan.md  ship.md
.claude/rules/: preferences.md
docs/: ARCHITECTURE.md  GETTING_STARTED.md  HARDWARE_OPTIMIZED_SETUP.md  IMPLEMENTATION_GUIDE.md  INSTALL_OLLAMA.md  LOCAL_MODELS_GUIDE.md  QUICKSTART_LOCAL.md  SPEC.md  TESTING.md
examples/: README.md  basic_rlm_demo.py  demo_full_recursion.py  demo_recursive_processing.py  test_ollama_integration.py  transparent_demo.py
kernel/: state.md
kernel/banks/: CODING-PROMPT-BANK.md  DEBUGGING-BANK.md  DISCOVERY-BANK.md  DOCUMENTATION-BANK.md  PLANNING-BANK.md  REVIEW-BANK.md
kernel/commands/: branch.md  debug.md  discover.md  parallelize.md  review.md
src/rlm/: __init__.py  config.py  exceptions.py
src/rlm/context/: __init__.py  chunking.py  manager.py  models.py
src/rlm/core/: __init__.py  aggregation.py  engine.py  models.py  transparent.py
src/rlm/execution/: __init__.py  sandbox.py  validator.py
src/rlm/models/: __init__.py  anthropic_llm.py  base.py  factory.py  groq_llm.py  ollama_llm.py  openai_llm.py  prompts.py  tiers.py
src/rlm/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/security/: __init__.py  test_sandbox_security.py
tests/unit/: __init__.py  test_config.py  test_context.py  test_exceptions.py  test_validator.py
web_dashboard/: README.md  app.py  requirements.txt
web_dashboard/templates/: index.html
